# OpenInventory-Backend-Community

./: Cargo.toml  README.md
src/: Var.rs  main.rs
src/controller/: AllTablesController.rs  CheckCredsController.rs  CreateTableController.rs  DefaultController.rs  LoginController.rs  mod.rs
src/models/: LoginCredentials.rs  MessageModel.rs  SQl_Structs.rs  TableModel.rs  mod.rs
src/models/request/: LoginRequest.rs  mod.rs
src/utils/: MySQL.rs  hashing.rs  installation.rs  installation_functions.rs  json_models.rs  loadFromConfig.rs  mod.rs  mysql_installation.rs  token.rs
src/utils/table_sql/: AllTables.rs  CreateTable.rs  ViewTable.rs  mod.rs
