[package]
name = "WR-MainAPI-rust"
version = "0.1.0"
authors = ["MathisBurger <handymathis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
mysql = "20.0.1"
json = "0.12.4"
