[package]
name = "OpenInventory-Backend"
version = "0.1.0"
authors = ["MathisBurger <handymathis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = {version = "0.4.1", features = ["mysql", "runtime-async-std-native-tls"]}
json = "0.12.4"
curl = "0.4.34"
pwhash = "0.3"
rand = "0.7.3"
